@@ -189,9 +189,9 @@ void tevent_handler::handle_event(const SDL_Event& event)
 			switch(event.button.button) {
 
 				/*
-				 * All button clicks should trigger easy_close() unfortunately
-				 * the scrollwheel also produceses click events, thus the
-				 * function is moved to all cases.
+				 * All button clicks should trigger easy_close() This is doen
+				 * in the mouse_button_up function since that also evaluates
+				 * the state of the mouse before handling the event.
 				 *
 				 * Note the engine makes sure easy close is disabled when a
 				 * widget needs to process the click so calling it
@@ -200,17 +200,14 @@ void tevent_handler::handle_event(const SDL_Event& event)
 				case SDL_BUTTON_LEFT :
 					DBG_G_E << "Event: Left button up.\n";
 					mouse_button_up(event, mouse_over, left_);
-					easy_close();
 					break;
 				case SDL_BUTTON_MIDDLE :
 					DBG_G_E << "Event: Middle button up.\n";
 					mouse_button_up(event, mouse_over, middle_);
-					easy_close();
 					break;
 				case SDL_BUTTON_RIGHT :
 					DBG_G_E << "Event: Right button up.\n";
 					mouse_button_up(event, mouse_over, right_);
-					easy_close();
 					break;
 				default:
 					// cast to avoid being printed as char.
@@ -493,6 +490,7 @@ void tevent_handler::mouse_button_up(
 
 	button.focus = 0;
 	set_hover();
+	easy_close();
 }
 
 void tevent_handler::mouse_click(twidget* widget, tmouse_button& button)
