@@ -1,6 +1,8 @@
 Version 1.5.7+svn:
  * Graphics:
    * Fixed drawing glitches in the listboxes.
+   * Fixed a glitch which closed a new dialog on the mouse up event of the old
+     dialog (the effect is percieved as the new dialog not showing up).
  * Language and i18n:
    * updated translations: Slovak
  * Networking
